API: Change 'language' to 'output_language', add 'comment_language'
